--- a/docker/.dockerignore
+++ b/docker/.dockerignore
@@ -1,30 +1,30 @@
 # Archivos y directorios de configuración locales
-../*.sqlite3
-../*.pyc
-../*.pyo
-../*__pycache__
-../*.Python
-../*.DS_Store
-../.env
-../.env.example
-../.env.prod
-../.env.prod.example
-../.vscode/
-../.git
-../.gitignore
-../docs
-../**/meta/
+*.sqlite3
+*.pyc
+*.pyo
+*__pycache__
+*.Python
+*.DS_Store
+.env
+.env.example
+.env.prod
+.env.prod.example
+.vscode/
+.git
+.gitignore
+docs
+**/meta/
 docker-compose.prod.yml
 docker-compose.dev.yml
 docker-compose.yml
 Dockerfile
 .dockerignore
-../README.md
+README.md
 
 # Archivos y directorios generados por el sistema
-../**/node_modules/
-../npm-debug.log
-../yarn-debug.log*
-../yarn-error.log*
-../__MACOSX/
-../Thumbs.db
+**/node_modules/
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+__MACOSX/
+Thumbs.db
