--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -2,7 +2,11 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile
+    image: ecommerce-api
+    container_name: api
     ports:
       - ${PORT}:8000
     depends_on:
